# widom

./: LICENSE  README.md  pyproject.toml
src/widom/: __init__.py  analyze.py  ase_widom_insertion.py  run.py  sample_compute_energies.py  structure_preparation.py  utils.py  widom_insertion_task.py
tests/widom/: test_integration.py  test_utils.py
