[project]
name = "widom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.25.0",
    "numpy>=2.2.6",
    "pydantic>=2.11.5",
    "pymatgen>=2025.5.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
